deps/crates/vendor/serde_json/tests/ui/parse_key.stderr
error[E0609]: no field `s` on type `&'static str`
 --> tests/ui/parse_key.rs:4:16
  |
4 |     json!({ "".s : true });
  |                ^ unknown field
